// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Header correctly 1`] = `
<header>
  <h2
    className="app-title"
  >
    Brew Dog
  </h2>
  <p
    className="app-subtitle"
  >
    Beer application
  </p>
</header>
`;

exports[`should render Header with title only 1`] = `
<header>
  <h2
    className="app-title"
  >
    Brew Dog
  </h2>
</header>
`;
